2021-08-10 Version: 1.2.7
1、support BatchCreateContainerGroups API

2021-06-09 Version: 1.2.6
1, support spot duration
2, support flash cache

2021-05-20 Version: 1.2.5
1, create support flexVolume

2021-05-17 Version: 1.2.4
1, fixup RamRoleName request && describeRegions response

2021-03-31 Version: 1.2.3
1, completion create request args

2021-03-24 Version: 1.2.2
1, fixup acrRegistryInfos

2021-03-24 Version: 1.2.1
1, completion describe response

2021-03-11 Version: 1.2.0
1, support acrRegistryInfo

2021-02-25 Version: 1.1.19
1, exec reponse add HttpUrl

2021-01-14 Version: 1.1.18
1、support anpassen systemfestplatte

2020-12-24 Version: 1.1.17
1、support specity resourcegroupid describe

2020-12-05 Version: 1.1.16
1, not support template api
2, describePrice support spotInstanceType

2020-11-25 Version: 1.0.15
1, support ListUsage

2020-11-19 Version: 1.0.14
1, support automatchimagecache cache reuse

2019-04-25 Version: 1.0.7
1, support mode of configFileVolume

2019-04-23 Version: 1.0.6
1, support mode of configFileVolume

2019-04-10 Version: 1.0.6
1, support metric
2, support emptyDirVolume memory medium

2019-03-20 Version: 1.0.5
1, support template api.
2, support hostAliases/clientToken

2019-03-13 Version: 1.0.4
1, Add application name support for config center APIs.
2, Add GetCluster API.
3, Support debug switch in user region APIs.

2019-03-13 Version: 1.0.4
1, Add application name support for config center APIs.
2, Add GetCluster API.
3, Support debug switch in user region APIs.

2019-03-13 Version: 1.0.4
1, support restart/update for eci.
2, support describePrice and exec api.
3, support subpath for volumemount

2018-12-29 Version: 1.0.3
1, Add probe for container.
2, Add securityContext for container.
3, Add dnsConfig for pod.
3, Add unmarshall tool for ECI

2018-11-07 Version: 1.0.0
1, The beta version SDK of ECI.
2, Only supports Java and Python.
3, Go will be supported soon
