@@ -59,6 +59,8 @@ public class CreateImageCacheRequest extends RpcAcsRequest<CreateImageCacheRespo
 
 	private Boolean flash;
 
+	private List<AcrRegistryInfo> acrRegistryInfos;
+
 	public CreateImageCacheRequest() {
 		super("Eci", "2018-08-08", "CreateImageCache", "eci");
 		setMethod(MethodType.POST);
@@ -259,6 +261,26 @@ public class CreateImageCacheRequest extends RpcAcsRequest<CreateImageCacheRespo
 		}
 	}
 
+	public List<AcrRegistryInfo> getAcrRegistryInfos() {
+		return this.acrRegistryInfos;
+	}
+
+	public void setAcrRegistryInfos(List<AcrRegistryInfo> acrRegistryInfos) {
+		this.acrRegistryInfos = acrRegistryInfos;
+		if (acrRegistryInfos != null) {
+			for (int depth1 = 0; depth1 < acrRegistryInfos.size(); depth1++) {
+				if (acrRegistryInfos.get(depth1).getDomains() != null) {
+					for (int i = 0; i < acrRegistryInfos.get(depth1).getDomains().size(); i++) {
+						putQueryParameter("AcrRegistryInfo." + (depth1 + 1) + ".Domain." + (i + 1), acrRegistryInfos.get(depth1).getDomains().get(i));
+					}
+				}
+				putQueryParameter("AcrRegistryInfo." + (depth1 + 1) + ".InstanceId", acrRegistryInfos.get(depth1).getInstanceId());
+				putQueryParameter("AcrRegistryInfo." + (depth1 + 1) + ".InstanceName", acrRegistryInfos.get(depth1).getInstanceName());
+				putQueryParameter("AcrRegistryInfo." + (depth1 + 1) + ".RegionId", acrRegistryInfos.get(depth1).getRegionId());
+			}
+		}
+	}
+
 	public static class ImageRegistryCredential {
 
 		private String server;
@@ -289,6 +311,48 @@ public class CreateImageCacheRequest extends RpcAcsRequest<CreateImageCacheRespo
 
 		public void setPassword(String password) {
 			this.password = password;
+		}
+	}
+
+	public static class AcrRegistryInfo {
+		private String instanceName;
+
+		private String instanceId;
+
+		private String regionId;
+
+		private List<String> domains;
+
+		public List<String> getDomains() {
+			return this.domains;
+		}
+
+		public void setDomains(List<String> domains) {
+			this.domains = domains;
+		}
+
+		public String getInstanceName() {
+			return this.instanceName;
+		}
+
+		public void setInstanceName(String instanceName) {
+			this.instanceName = instanceName;
+		}
+
+		public String getInstanceId() {
+			return this.instanceId;
+		}
+
+		public void setInstanceId(String instanceId) {
+			this.instanceId = instanceId;
+		}
+
+		public String getRegionId() {
+			return this.regionId;
+		}
+
+		public void setRegionId(String regionId) {
+			this.regionId = regionId;
 		}
 	}
 
